# seqdat

./: .flake8  .gitignore  .pre-commit-config.yaml  Justfile  Makefile  README.md  build.sh  pyoxidizer.bzl  pyproject.toml
.github/workflows/: build.yml  pypi.yml  release.yml
docs/: usage.md
seqdat/: cli.py  project.py
src/seqdat/: cli.py  database.py
