[tool.poetry]
name = "seqdat"
version = "0.1.0"
description = "brock lab sequencing data manager"
authors = ["Daylin Morgan <daylinmorgan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<3.11"
click = "^8.0.3"
click-help-colors = "^0.9.1"
rich = "^10.12.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
isort = "^5.10.0"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"
pyinstaller = "^4.6"

[tool.poetry.scripts]
seqdat = "seqdat.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
