[project]
name = "seqdat"
version = "22.1.3"
description = "sequencing data manager"
authors = [
    {name = "Daylin Morgan", email = "daylinmorgan@gmail.com"},
]
dependencies = [
    "click<9.0.0,>=8.0.3",
    "rich>=10.12.0",
    "click-rich-help>=0.3.0",
    "tomlkit>=0.10.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/daylinmorgan/seqdat"

[project.scripts]
seqdat = "seqdat.cli:main"

[tool.pdm.dev-dependencies]
dev = ["mypy"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
